k8s/network-policies/cilium.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hubble-ui-network-policy
  namespace: kube-system
spec:
  ingress:
    - ports:
        - port: http
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-ui
  policyTypes:
    - Ingress
