k8s/network-policies/exdns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: exdns-network-policy
  namespace: kube-system
spec:
  ingress:
    - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: k8s-gateway
  policyTypes:
    - Ingress
