k8s/network-policies/monitoring.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coredns-monitoring-network-policy
  namespace: kube-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              operator.prometheus.io/name: kube-prometheus-stack-prometheus
      ports:
        - port: 9153
          protocol: TCP
  podSelector:
    matchLabels:
      k8s-app: kube-dns
  policyTypes:
    - Ingress
